<resources>
    <string name="app_name">ServiceScreen</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>
    <string name="title_activity_login">Login</string>
    <string name="loginTV">דף התחברות</string>
    <string name="appServiceTV">\"?מי בתור\"</string>
    <string name="userNameHint">שם משתמש</string>
    <string name="passwordHint">סיסמא</string>
    <string name="loginButtonText">התחבר</string>
    <string name="title_activity_main_activity22">MainActivity22Activity</string>
    <string name="takeLineButtonTV">לחץ\n  על מנת לקבל תור ללא שימוש באפליקציה</string>
    <string name="qr2TV">סרוק את הקוד באמצעות המכשיר על מנת לקבל תור</string>
    <string name="qr1TV">קבלת תור למשתמשי האפליקציה</string>
    <string name="finalCurrTV">הלקוח הבא בתור, לקוח מספר : </string>
    <string name="currTV">טוען ... </string>
    <string name="waitingTV">טוען ...</string>
    <string name="avergeTimeTV">"זמן ממוצע עד לקבלת התור : "</string>
    <string name="finalWaitingTV">מספר הלקוחות הממתינים : </string>
</resources>
